--- a/css/global.css
+++ b/css/global.css
@@ -1,9 +1,12 @@
 .item {
-	background: #1F3043;
-	color: #fff;
-	padding: 10px 12px;
+	color: rgba(255,255,255,0.5);
+	padding: 10px;
+	font-size:14px;
+	font-weight: 400;
+	cursor: pointer;
 }
 
 .item:hover {
-	background: #2A3B4D;
+	background: rgba(255, 255, 255, 0.1);
+	color: #fff;
 }
