--- a/css/index.css
+++ b/css/index.css
@@ -31,6 +31,16 @@ h4 {
 
 }
 
+p {
+  color: #fff;
+    padding: 5px 20px;
+    margin: 0;
+}
+
+span {
+  padding-left: 5px;
+}
+
 #topPanel {
   background: rgba(0,0,0,0.8);
   width: 270px;
@@ -100,6 +110,7 @@ h4 {
   -moz-transform: rotate(-45deg);
   -webkit-transform: rotate(-45deg);
   transform: rotate(-45deg);
+  margin-top: 1.5em;
 }
 
 #arrowContainer .arrow {
@@ -132,7 +143,16 @@ h4 {
   width: 270px;
 }
 
-#mapContainer {
+#countryDetailInfo {
+  position: absolute;
+  width: 300px;
+  background: rgba(0,0,0,0.8);
+  visibility: hidden;
+  padding-bottom: 10px;
+}
+
+#countryDetailInfo #h3-country {
+  color: white;
 }
 
 #countrySelectorSection {
