update on multivaraite map

--- a/css/componentSelector.css
+++ b/css/componentSelector.css
@@ -2,9 +2,12 @@
 	padding-left: 10px;
 }
 
+.componentSelector-menu {
+	color: white;
+}
+
 .componentSelector-submenu {
 	padding: 10px;
-	background: #1F3043;
 }
 
 .componentSelector-submenu-item-checked {
