--- a/css/parallel.css
+++ b/css/parallel.css
@@ -4,6 +4,6 @@
   stroke: steelblue;
 }
 
-.axis text {
+.textParallel {
   text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
 }
